# clip-finder

./: .gitignore  components.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
engine/: .gitignore  engine.spec  main.py  pyproject.toml
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs
src-tauri/src/commands/: video.rs
src-tauri/src/database/: connection.rs  mod.rs  models.rs  operations.rs
src-tauri/src/engine/: clip.rs  engine.rs  index.rs  mod.rs
src/components/: app-sidebar.tsx  index-status.tsx  search-result.tsx  tag-editor.tsx  video.tsx
src/components/ui/: button.tsx  card.tsx  confirm-dialog.tsx  pagination.tsx  sidebar.tsx
src/contexts/: EngineContext.tsx  NavigationContext.tsx
src/hooks/: debounce.ts
src/pages/: media.tsx  search.tsx
src/services/: api.ts
src/types/: api.ts  video.ts
