[project]
name = "clip-finder-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "lancedb>=0.30.2",
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "sentence-transformers>=5.5.0",
]
