[package]
name = "clipfinder"
version = "0.1.0"
description = "A Tauri App"
authors = ["praem1990@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipfinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-drag = "2.1.1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
lancedb = "0.26.2"
futures = "0.3.32"
arrow-json = "57.3.1"
arrow-array = "57.3.1"
chrono = "0.4.44"
tokenizers = "0.23.1"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.10.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.10.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.10.2" }
hf-hub = "0.5.0"
image = "0.25.10"
uuid = { version = "1.23.2", features = ["v4"] }
tempfile = "3.27.0"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version="0.10.2", features = ["metal"] }
candle-nn = {  git = "https://github.com/huggingface/candle.git", version = "0.10.2", features = ["metal"] }
candle-transformers = {  git = "https://github.com/huggingface/candle.git", version = "0.10.2", features = ["metal"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
